[package]
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
name = "comparison"
version = "0.1.0"

[[bench]]
name = "bench"
harness = false

[dependencies]
fnv = "1.0"
rand = "0.3.15"
twox-hash = { path = ".." }
libc = "0.2.53"
criterion = "0.2.11"
proptest = "0.9.3"

[features]
bench = []

[build-dependencies]
cc = "1.0.36"
