[package]
name = "twox-hash"
version = "1.6.3"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2021"
rust-version = "1.81"

description = "A Rust implementation of the XXHash and XXH3 algorithms"
readme = "README.md"
keywords = ["hash", "hasher", "xxhash", "xxh3"]
categories = ["algorithms"]

repository = "https://github.com/shepmaster/twox-hash"
documentation = "https://docs.rs/twox-hash/"

license = "MIT"

[workspace]
members = [
    "asmasm",
    "compare",
    "renu-sum",
    "xx_hash-sys",
]

[features]
default = ["random", "xxhash32", "xxhash64", "xxhash3_64", "alloc", "std"]

random = ["dep:rand"]

serialize = ["dep:serde"]

xxhash32 = []
xxhash64 = []
xxhash3_64 = []

alloc = []
std = ["alloc"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(_internal_xxhash3_force_scalar)',
    'cfg(_internal_xxhash3_force_neon)',
    'cfg(_internal_xxhash3_force_sse2)',
    'cfg(_internal_xxhash3_force_avx2)',
]

[dependencies]
rand = { version = "0.8.0", optional = true, default-features = false, features = ["std", "std_rng"] }
serde = { version = "1.0.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.117"

[package.metadata.docs.rs]
all-features = true
